--- a/editor-web-app-alpha/css/timelineStyles.css
+++ b/editor-web-app-alpha/css/timelineStyles.css
@@ -13,7 +13,7 @@
     background-color: var(--primary-purple);
     border-radius: 5px;
     padding: 10px;
-    min-height: 180px;
+    min-height: 210px;
     overflow-x: auto;
     color: #fff;
     border: 1px solid #ccc;
@@ -22,14 +22,24 @@
 /* TIMELINE NUMBER MARKERS */
 .timeline-numbers {
     position: absolute;
-    top: 0; /* Move it to the top */
+    top: -20px;
     left: 0;
     width: 100%;
     display: flex;
     align-items: center;
     gap: 10px;
     border-bottom: 2px solid #777;
-    z-index: 10; /* Ensure it's above the tracks */
+    z-index: 10;
+}
+
+/* GRID LINES */
+.timeline-grid-line {
+    position: absolute;
+    width: 1px;
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 96%;
+    top: 4%;
+    z-index: 11;
 }
 
 .timeline-horizontal-line {
@@ -50,10 +60,13 @@
 
 .timeline-time-label {
     position: absolute;
-    font-size: 12px;
-    color: #fff;
-    top: 35px;
-    transform: translateX(-50%);
+    font-size: 10px;
+    color: #000;
+    top: 15px;
+    background-color: #fff;
+    border: 2px solid #777;
+    padding: 2px 5px;
+    /* transform: translateX(-50%); */
 }
 
 /* TIMELINE TRACKS */
@@ -106,7 +119,7 @@
     position: relative;
     height: 50px;
     border-bottom: 1px solid #ccc;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0);
     display: flex;
     align-items: center;
     padding-left: 5px;
@@ -136,7 +149,7 @@
 /* TIMELINE EVENT BLOCKS */
 .timeline-animation {
     position: absolute;
-    height: 30px;
+    height: 40px;
     line-height: 30px;
     font-size: 12px;
     text-align: center;
